--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
+  <title>Great Pyramid of Giza</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <title>Great Pyramid of Giza</title>
 </head>
 <body>
-  <img src="images/pyramid-giza.jpg" alt="">
-  <h2>Great Pyramid of Giza</h2>
-  <p>The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
-  <a href="#">Visit Khufu</a>
-
+  <section>
+    <div>
+      <img src="images/pyramid-giza.jpg" alt="">
+    </div>
+    <div>
+      <h2>Great Pyramid of Giza</h2>
+      <p>The Great Pyramid of Giza (also known as the Pyramid of Khufu or the Pyramid of Cheops) is the oldest and largest of the three pyramids in the Giza pyramid complex bordering what is now El Giza, Egypt. It is the oldest of the Seven Wonders of the Ancient World, and the only one to remain largely intact.</p>
+      <a href="#" class="btn">Visit Khufu</a>
+    </div>
+  </section>
 </body>
 </html>
